# codereview-agent

./: .codereview-agent.yaml  .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README_en.md  action.yml  custom-prompt.template
.github/: dependabot.yml
.github/workflows/: ci.yml  codereview.yml  release.yml
.sisyphus/: boulder.json
.sisyphus/evidence/: task-1-bug-fix.txt  task-2-format-check.txt  task-2-lint-fix.txt  task-3-test-baseline.txt  task-3-test-collect.txt  task-4-cli-flags.txt
.sisyphus/notepads/comprehensive-improvement/: learnings.md
.sisyphus/plans/: comprehensive-improvement.md
docker/: Dockerfile  docker-compose.yml
docs/: CASE_STUDIES.md  COMPARISON.md  DATA_VISUALIZATION.md  DEMO_GUIDE.md  DESIGN.md  GLOSSARY.md  PRODUCT_HUNT.md  README.md  USER_GUIDE.md  USER_OUTREACH.md  USE_CASES.md  auto-merge.md  cache.md  configuration.md  faq.md  fix-command.md  getting-started.md  rules.md  troubleshooting.md
nodejs/: package.json
nodejs/src/cli/: wrapper.ts
python/: pyproject.toml  pytest.ini
python/src/codereview/: __init__.py  cli.py  github_app.py
python/src/codereview/agents/: __init__.py  analyzer.py  reviewer.py
python/src/codereview/core/: __init__.py  auto_merger.py  cache.py  complexity_scorer.py  config.py  fixer.py  github_client.py  history_tracker.py  llm.py  path_matcher.py  report_generator.py  team_insights.py
python/src/codereview/core/languages/: __init__.py
python/src/codereview/core/languages/cpp/: __init__.py  analyzer.py  rules.py
python/src/codereview/core/languages/csharp/: __init__.py  analyzer.py  rules.py
python/src/codereview/core/languages/go/: __init__.py  analyzer.py  rules.py
python/src/codereview/core/languages/java/: __init__.py  analyzer.py  rules.py
python/src/codereview/core/languages/php/: __init__.py  analyzer.py  rules.py
python/src/codereview/core/languages/ruby/: __init__.py  analyzer.py  rules.py
python/src/codereview/core/languages/rust/: __init__.py  analyzer.py  rules.py
python/src/codereview/models/: __init__.py
python/src/codereview/output/: __init__.py  generator.py
python/src/codereview/rules/: __init__.py  owasp_rules.yaml
python/tests/: __init__.py  conftest.py  test_agent_friendly.py  test_analyzer.py  test_auto_merger.py  test_cache.py  test_cache_namespace.py  test_cli.py  test_cli_bug_fix.py  test_cli_flags.py  test_complexity_scorer.py  test_config.py  test_config_flexibility.py  test_error_handling.py  test_fixer.py  test_github_client.py  test_history_tracker.py  test_json_repair.py  test_languages.py  test_llm.py  test_llm_fallback.py  test_logging.py  test_models.py  test_output.py  test_path_matcher.py  test_progress.py  test_report_generator.py  test_retry.py  test_reviewer.py  test_rule_management.py  test_rules.py  test_team_insights.py
vscode-extension/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
vscode-extension/src/: extension.ts  reviewManager.ts  reviewPanel.ts
vscode-extension/src/test/: index.ts  runTest.ts
