[project]
name = "codereview-agent"
version = "1.2.0"
description = "AI-powered CodeReview Agent with LangChain + LangGraph"
readme = "README.md"
license = { file = "../LICENSE" }
requires-python = ">=3.9"
dependencies = [
    "langchain>=0.3.0",
    "langgraph>=0.2.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.2.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    "python-dotenv>=1.0.0",
    "tenacity>=8.0.0",
    "aiofiles>=23.0.0",
    "aiohttp>=3.9.0",
    "tqdm>=4.0.0",
    "pathspec>=0.12.0",
]

[project.urls]
Homepage = "https://github.com/wanghenan/codereview-agent"
Repository = "https://github.com/wanghenan/codereview-agent"
Changelog = "https://github.com/wanghenan/codereview-agent/blob/main/CHANGELOG.md"
Issues = "https://github.com/wanghenan/codereview-agent/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.0.0",
    "ruff>=0.6.0",
    "mypy>=1.0.0",
    "matplotlib>=3.0.0",
]

[project.scripts]
codereview = "codereview.cli:cli"

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501", "UP045"]

[tool.mypy]
python_version = 3.9
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_any_generics = false
disable_error_code = ["var-annotated", "import-untyped", "import-not-found", "no-untyped-def", "no-untyped-call", "type-arg", "attr-defined", "assignment", "arg-type", "return-value", "misc", "no-any-return", "valid-type", "syntax", "operator", "call-overload"]

[tool.coverage.run]
source = ["codereview"]
branch = true
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
# Fail CI if coverage drops below this threshold. Set conservatively to the
# current baseline so existing code passes; raise as coverage improves.
fail_under = 50
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
